--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     namespace 'org.woheller69.gptassist'
     android.buildFeatures.buildConfig true
     defaultConfig {
-        applicationId "org.woheller69.gptassist"
+        applicationId "tz.me.john.youtube"
         minSdk 21
-        targetSdk 35
-        versionCode 220
-        versionName "2.20"
+        targetSdk 34
+        versionCode 160
+        versionName "0.1"
     }
 
     buildTypes {
